# tyr

./: CLAUDE.md  README.md  index.html  pyproject.toml
src/tyr/: __init__.py  core.py  reporter.py  rules.py
tests/: test_core.py  test_reporter.py  test_rules.py
