[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tyr"
version = "0.1.0"
description = "Automated naming convention validator for Git workflows"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
